# how-to-run-googletest

./: CMakeLists.txt  README.md
script/: build.sh
src/: CMakeLists.txt  stack.cpp  stack.h
test/: CMakeLists.txt  hello_gmock_01.cpp  hello_gmock_02.cpp  hello_gmock_03.cpp  hello_gtest_01.cpp  hello_gtest_02.cpp  hello_gtest_03.cpp  hello_gtest_04.cpp  test_stack.cpp
